# insight-client

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
cli/: Dockerfile  README.md  pyproject.toml
cli/insight/: __init__.py  oauth.py  pagestream.py  pagestreams.py  upload.py  uploads.py
cli/insight_cli/: __init__.py  config.py  file.py  oauth.py  pagestream.py  prompt.py
insight_cli/: __init__.py  config.py  file.py  oauth.py
insight_client/: __init__.py  client.py  config.py  file.py  oauth.py
insightclient/: __init__.py  client.py  config.py  file.py
tests/: test_refresh.py
