[tool.poetry]
name = "insight-client"
version = "v0.3.5"
description = "Python client and CLI for the insight system"
authors = ["Johan <johan@resolve.works>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
tqdm = "^4.66.1"
minio = "^7.2.0"
requests-oauthlib = "^2.0.0"
keyring = "^25.5.0"

[tool.poetry.scripts]
insight = "insight_client:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
