[tool.poetry]
name = "insight-cli"
version = "0.1.0"
description = "CLI for the insight system"
authors = ["Johan <johan@ftm.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
keyring = "^24.2.0"
tqdm = "^4.66.1"
requests = "^2.31.0"

[tool.poetry.scripts]
insight = "insight_cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
